@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-01-22T16:19:57Z",
+  "timestamp" : "2024-01-23T08:20:27Z",
   "count_outdated" : 1543,
   "uniques_outdated" : 844,
-  "count" : 1561,
-  "uniques" : 855,
+  "count" : 1562,
+  "uniques" : 856,
   "clones" : [
     {
       "timestamp": "2024-01-09T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -91,6 +91,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-01-23T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
